--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "^3.1.2",
     "express": "^4.17.1",
     "mongoose": "^5.9.14",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4"
   }
 }
